fail_crate/tests/optional_unit.rs
use inew::New;

#[derive(New)]
struct A {
    #[new(optional)]
    x: (),
}

fn main() {}
